WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288611
[JSC][GreedyRegAlloc] Fix a logic error when computing cannotSpillInPlace
https://bugs.webkit.org/show_bug.cgi?id=288611
Summary
[JSC][GreedyRegAlloc] Fix a logic error when computing cannotSpillInPlace
Dan Hecht
Reported
2025-02-26 09:17:26 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-26 09:17:38 PST
<
rdar://problem/145667429
>
Dan Hecht
Comment 2
2025-02-26 09:24:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41415
EWS
Comment 3
2025-02-26 10:55:41 PST
Committed
291145@main
(f336bd7ad8e3): <
https://commits.webkit.org/291145@main
> Reviewed commits have been landed. Closing PR #41415 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug